# python-package

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: api.md  main.md
src/: __init__.py  main.py
tests/test_main/: test_main.py
