[tool.poetry]
name = "package-python"
version = "0.0.1"
description = "Add a short description of your package."
authors = ["First Last <example@example.com>"]
readme = "README.md"
packages = [{include = "src"}]
license = "Apache-2.0"
homepage = "Add URL of package homepage."
documentation = "Add URL of package documentation homepage."
repository = "Add github URL to repository."
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
mypy = "*"
ruff = "*"
pytest = "*"
pytest-dependency = "*"
pre-commit = "*"

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
mkdocstrings-python = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length=150
indent-width=2
exclude = [
  "docs/",
  "tests/",
]

[tool.ruff.lint]
select = [
  "F",  # Pyflakes
  "W6",
  "E71",
  "E72",
  "E112",   # no-indented-block
  "E113",   # unexpected-indentation
  "E203",   # whitespace-before-punctuation
  "E272",   # multiple-spaces-before-keyword
  "E275",   # missing-whitespace-after-keyword
  "E303",   # too-many-blank-lines
  "E304",   # blank-line-after-decorator
  "E501",   # line-too-long
  "E702",   # multiple-statements-on-one-line-semicolon
  "E703",   # useless-semicolon
  "E731",   # lambda-assignment
  "W191",   # tab-indentation
  "W291",   # trailing-whitespace
  "W293",   # blank-line-with-whitespace
  "UP039",  # unnecessary-class-parentheses
  "C416",   # unnecessary-comprehension
  "RET506", # superfluous-else-raise
  "RET507", # superfluous-else-continue
  "A",      # builtin-variable-shadowing, builtin-argument-shadowing, builtin-attribute-shadowing
  "SIM105", # suppressible-exception
  "FURB110",# if-exp-instead-of-or-operator
  "RUF018", # assignment-in-assert
]

[tool.ruff.lint.pydocstyle]
convention = "google"